	spectrumctl:
	* No longer enforce any permissions on filetransfer_cache (it has to
	  be writable by the webserver)
	* Remove the --cron option for action 'list'
	* New action 'cron' is now intended for regular cron runs:
	  * It outputs transports that have crashed
	  * Saves backtraces, logs and the current spectrum_version (see
	    new --output-dir option)
	  * Prints location of those files

version 1.4.4 (2010-11-25):
	General:
	* Error messages are sent in presences from transport contact.
	* SQL statement to check if user is VIP can be changed in config file
	  using [database] vip_statement config.
	* Fixed crash when there were buddies with non-unicode characters
	  in database

	ICQ:
	* Fixed connecting the network with libpurple 2.7.7.

version 1.4.3 (2010-10-28):
	General:
	* Fixed crash when there were buddies with non-unicode characters
	  in database
	* Faster Roster Item Exchange forwarding.
	* First presence from transport is sent when user is actually
	  logged in to legacy network.
	* Forward only presences from active resource to legacy network.
	* Send mime-types in VCards.
	* Fixed caps hash.

	ICQ:
	* Fixed logging issues.
	
version 1.4.2 (2010-10-08):
	General:
	* Fixed crash when user rejected susbcribe request after automatic
	  reconnection.
	* Fixed crash in DNSResolver when resolving was cancelled in some cases.
	* Fixed crash when conversations were not properly deleted after logout. 
	* Fixed chatstates forwarding from XMPP to legacy network.
	* Sending statistics to anyone can be disabled by setting
	  [features] statistics=0.
	* Fixed missing 'ver' attribute in presence caps after
	  "spectrumctl reload".
	* Added support for libevent. Epoll can be used instead of poll by setting
	  [service] eventloop=epoll. Use epoll only with standard libpurple
	  protocols, otherwise it doesn't have to work well.
	* Added new [registration] allowed_users=regexp config variable
	  to white-list registration usernames.

	pytransports2spectrum: